# AOS

./: .dockerignore  .env.example  .eslintignore  .eslintrc.json  .gitignore  AGENT.md  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RESULT.md  cli.ts  docker-compose.yml  eslint.config.mjs  next.config.js  opencode.jsonc  package-lock.json  package.json  plan.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  reproduce.sh  tailwind.config.cjs  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  feature_request.yml
.github/workflows/: ci.yml
.opencode/: package.json
.opencode/plugin/: aos_connector.js
.streamlit/: config.toml
adapters/: core.ts  mcp.ts
app/: layout.tsx  page.tsx
app/agents/: page.tsx
app/integrations/: page.tsx
app/memory/: page.tsx
app/projects/: page.tsx
app/sandbox/: page.tsx
app/settings/: page.tsx
app/telemetry/: page.tsx
apps/aos_backend/: Dockerfile  README.md  pyproject.toml
apps/aos_backend/src/aos_backend/: __init__.py  agent.py  main.py  security.py
apps/aos_backend/src/aos_backend/routers/: logs.py
apps/aos_dashboard/: README.md  app.py  pyproject.toml
apps/aos_frontend/: .env.example  package-lock.json  package.json  tailwind.config.js
artifacts/roll/: episodes-rollback.md
artifacts/ux/: episodes-smoke.md
backend/: .env.example  package-lock.json  package.json  tsconfig.json
backend/db/: init.sql
backend/src/: index.ts
components/: ChatMessageList.tsx  ErrorCard.tsx  HeaderPrimaryNav.tsx  LogFlowPanel.tsx  PlanTimeline.tsx  RunStatusIndicator.tsx  SkillPanel.tsx  navigation.tsx  useLocalToast.tsx
components/chat/: ChatMain.tsx  FinalReplyCard.tsx  InsightsPanel.tsx  Sidebar.tsx
components/layout/: AppLayout.tsx
components/panels/: ConversationListPanel.tsx  InspectorPanel.tsx
components/threads/: MainThread.tsx
components/ui/: SectionTitle.tsx  dialog.tsx
config/: i18n.d.ts  i18n.js  llm.ts  mcpRegistry.ts
core/: agent.js  agent.ts
docs/: PROJECT.md  README.md  SRS.template.yaml  SRS.yaml  aos-v0.1-blueprint.md  architecture-v0.2.md  config.md  decision.md  feature-gap-analysis.md  opencode-connector.md  srs.schema.json  操作指南_Episodes与Replay.md  目录索引.md  详细设计与API契约.md  需求全景规划.md
docs/需求草稿/: Agent Os（aos）草稿需求·v0.md  Agent Os（aos）草稿需求·v1.md
frontend/: .env.example  Dockerfile  README.md  jest.config.js  package-lock.json  package.json  tailwind.config.js
hand-runtime/: package-lock.json  package.json  tsconfig.json
hand-runtime/src/: server.ts
lib/: apiConfig.ts  authToken.ts  datetime.ts  episodes.ts  id.ts  layout.ts  logflow.ts  logflowMessages.ts  mcp.ts  skills.ts  theme.ts
lib/guardian/: index.ts
lib/i18n/: I18nProvider.tsx  config.ts  index.ts
locales/en/: common.json
locales/zh-CN/: common.json
pages/: _app.tsx  _document.tsx  episodes.tsx  index.tsx  run.tsx  skills.tsx  tools.tsx
pages/api/: run.ts
reflect/: 20250218-adapters-cli.md  20250219-api-config-injection.md  20250219-run-stream-eventsource.md  20250919-llm-chat-timeout.md  20250919-pnpm-dev-all.md
runtime/: episode.js  episode.ts  events.ts  replay.js  replay.ts  runRegistry.ts
scripts/: dev-all.mjs  intake.mjs  replay.mjs  score.mjs  skills-eval.ts  smoke.mjs  test_backend.py  ts-loader.mjs  verify_entropy.py  verify_logging.py  vitest-runner.mjs
server/: http.ts
servers/: mcp-core.ts
servers/api/: tsconfig.json
styles/: globals.css
tests/: apiRun.test.ts  chatComponents.test.tsx  chatKernel.test.ts  chatMessageList.test.tsx  chatSendApi.test.ts  cli.test.ts  episodeLogger.test.js  episodeLogger.test.ts  homePage.i18n.test.tsx  llmChat.test.ts  llmConfig.test.ts  logflow.test.ts  logflowApi.test.ts  mcpAdapter.test.ts  mcpInvoker.test.ts  mcpWorkspace.test.ts  replay.test.js  replay.test.ts  runApi.test.ts  runLoop.test.js  runLoop.test.ts  runStream.test.ts  skillsApi.test.ts  skillsPipeline.test.ts  test_backend_smoke.py  useLocalToast.test.tsx
types/: better-sqlite3.d.ts  express.d.ts  logflow.ts  playwright-test.d.ts  supertest.d.ts  vitest.d.ts
ui/: index.html
(+154 files in other folders)
