[project]
name = "aos-monorepo"
version = "0.2.0"
description = "AOS: Agent Operating System (Inverse Entropy Edition)"
requires-python = ">=3.10"
dependencies = [
    "aos_telemetry",
    "aos_storage",
    "aos_memory",
    "aos_backend",
]

[tool.uv.sources]
aos_telemetry = { workspace = true }
aos_storage = { workspace = true }
aos_memory = { workspace = true }
aos_backend = { workspace = true }

[tool.uv.workspace]
members = ["packages/*", "apps/aos_backend"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
exclude = "(^scripts/|^apps/aos_dashboard/app\\.py$)"

[[tool.mypy.overrides]]
module = ["aos_backend.main", "aos_memory.odysseus"]
disable_error_code = ["arg-type", "attr-defined", "union-attr"]
