[project]
name = "aos-workspace"
version = "0.2.0"
description = "Agent Operating System - Inverse Entropy Edition"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aos_storage",
    "aos_telemetry",
    "aos_backend",
]

[tool.uv.workspace]
members = [
    "packages/*",
    "apps/aos_backend",
]

[tool.uv.sources]
aos_storage = { workspace = true }
aos_telemetry = { workspace = true }
aos_backend = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
