[project]
name = "aos_backend"
version = "0.1.0"
description = "AOS Backend: The Thinking Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "aos_telemetry",
    "aos_storage",
    "aos_memory",
]

[tool.uv.sources]
aos_telemetry = { workspace = true }
aos_storage = { workspace = true }
aos_memory = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aos_backend"]
