[project]
name = "aos_dashboard"
version = "0.1.0"
description = "AOS Dashboard: Streamlit Admin UI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "pandas",
    "aos_storage",
]

[tool.uv.sources]
aos_storage = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Since this is an app, not a library, we explicitly tell hatch what to include.
# However, hatchling expects a package structure. 
# We'll rely on explicit file selection or force inclusion of app.py
force-include = { "app.py" = "aos_dashboard/app.py" }
packages = []
